--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 
 {
-    "name": "hlyun/utils",
+    "name": "hlyun/utils_dev",
     "description": "封装常用方法",
     "type": "library",
     "license": "MIT",
