--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "waymen",
-            "email": "372203429@qq.com"
+            "name": "haili",
+            "email": "2850132730@qq.com"
         }
     ],
     "minimum-stability": "dev",
